--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -273,16 +273,16 @@
         \vspace{0.3cm}
         \textbf{Metrics:}
         \begin{itemize}
-            \item Weighted $R^2$: \textbf{0.763} (Trend Fit)
-            \item F-statistic: $\mathbf{4.19 \times 10^4}$ (Highly Significant)
-            \item Unweighted Test $R^2$: $\approx 0.24$ (Raw Data)
-            \item Test \textbf{RMSE}: 12.05 years
-            \item Test \textbf{MAE}: 9.31 years
+            \item Weighted $R^2$: \textbf{0.275} (Valid Trend Fit)
+            \item F-statistic: $\mathbf{4.94 \times 10^3}$ (Highly Significant)
+            \item Unweighted Test $R^2$: $\approx 0.24$ (Baseline MLR)
+            \item Test \textbf{RMSE}: 12.27 years
+            \item Test \textbf{MAE}: 9.30 years
         \end{itemize}
     \end{columns}
     
     \vspace{0.2cm}
-    \footnotesize{\textit{Note: The jump to 0.77 reflects weighting down outliers, not miraculously predicting them. The raw prediction power remains similar to MLR (0.30).}}
+    \footnotesize{\textit{Note: The $R^2$ of 0.275 reflects the high variance of musical evolution. The model captures the trend, but stylistic diversity remains high.}}
 \end{frame}
 
 \begin{frame}{Phase VI-A: Technological Drivers ("The Sound of Efficiency")}
