--- a/r/slides/slides.tex
+++ b/r/slides/slides.tex
@@ -1,4 +1,6 @@
+% !TEX program = xelatex
 \documentclass[aspectratio=169, 10pt]{beamer}
+\usepackage[UTF8, scheme=plain]{ctex}
 
 % --- Theme & Colors ---
 \usetheme{Madrid}
@@ -18,8 +20,8 @@
 % --- Metadata ---
 \title[Musical Carbon Dating]{Musical Carbon Dating}
 \subtitle{A Statistical Feature Recognition Approach (1960-2020)}
-\author[Group Project]{Group Presentation}
-\institute[Data Science]{University Statistical Analysis Project}
+\author[Group Project]{敖婧妍，李赫轩，田润泽，王胤博，肖俊佳}
+\institute[Regression Analysis]{School of Statistics }
 \date{\today}
 
 % --- Configuration ---
@@ -261,7 +263,7 @@
     \begin{columns}
         \column{0.5\textwidth}
         \centering
-        \includegraphics[width=1.0\linewidth]{r_wls_pred_vs_act_v1.png}
+        \includegraphics[width=0.8\linewidth]{r_wls_pred_vs_act_v1.png}
     
         \column{0.5\textwidth}
         \begin{alertblock}{What WLS Fixes}
@@ -283,7 +285,7 @@
     \end{columns}
     
     \vspace{0.2cm}
-    \footnotesize{\textit{Note: The weighted $R^2$ of 0.26 reflects the model's reliability after accounting for heteroscedasticity, maintaining predictive parity with the baseline OLS while ensuring valid inference.}}
+    % \footnotesize{\textit{Note: The weighted $R^2$ of 0.26 reflects the model's reliability after accounting for heteroscedasticity, maintaining predictive parity with the baseline OLS while ensuring valid inference.}}
 \end{frame}
 
 \begin{frame}{Phase VI-A: Technological Drivers ("The Sound of Efficiency")}
